--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
